# the-compact-rs

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/axum/: Cargo.toml
crates/axum/src/: lib.rs
crates/bindings/: Cargo.toml
crates/bindings/patch/: Cargo.toml
crates/bindings/patch/src/: allocatorlogic.rs  attestsetup.rs  brutalizer.rs  claimhashfunctioncastlib.rs  claimhashlib.rs  claimprocessorfunctioncastlib.rs  claimprocessorlogic.rs  consumerlib.rs  depositviapermit2logic.rs  directdepositlogic.rs  domainlib.rs  ecdsa.rs  efficiencylib.rs  eip712.rs  erc6909.rs  hashlib.rs  ieip712.rs  ithecompact.rs  lib.rs  math.rs  messagehashutils.rs  metadatareaderlib.rs  metadatarenderer.rs  registrationlogic.rs  safecast.rs  serverallocator_isvalidsignature.rs  serverallocator_managesigners.rs  serverallocator_ownerset.rs  shortstrings.rs  signerset.rs  transferlogic.rs  validitylib.rs
crates/bindings/server/: Cargo.toml
crates/bindings/server/src/: constructorlogic.rs  createhash.rs  emissarylib.rs  erc20mock.rs  eventlib.rs  extsload.rs  iallocator.rs  idlib.rs  ierc5267.rs  immutablecreate2factory.rs  iserverallocator.rs  isignaturetransfer.rs  libstring.rs  mockerc721.rs  mockssetup.rs  ownable.rs  ownable2step.rs  panic.rs  serverallocator.rs  serverallocator_attest.rs  serverallocator_consume.rs  sharedlogic.rs  signaturecheckerlib.rs  signedmath.rs  storageslot.rs  strings.rs  thecompactmock.rs  withdrawallogic.rs
crates/bindings/src/: alwaysokallocator.rs  calldatadebugger.rs  claimprocessor.rs  claimprocessorlib.rs  ierc20.rs  ithecompactclaims.rs  safetransferlib.rs  thecompact.rs  thecompactlogic.rs  tstorish.rs
crates/bindings/v0/: Cargo.toml
crates/bindings/v0/src/: componentlib.rs  depositlogic.rs  depositviapermit2lib.rs  efficienthashlib.rs  eip712.rs  erc20.rs  iallocator.rs  lib.rs  metadatalib.rs  mockerc20.rs  registrationlib.rs  transferfunctioncastlib.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs  main.rs
