[package]
name = "the-compact-rs-bindings"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true, features = ["sol-types", "contract"] }
